--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,7 @@
 body{
   background-color: black;
+  color: #fff;
+  font-size: 18px;
 }
 
 .App {
@@ -24,7 +26,7 @@ body{
   background-size: cover;
   height: 180px;
   margin-bottom: 2%;
-  padding: 20%;
+  padding-bottom: 50%;
   color: white;
 }
 
@@ -64,7 +66,7 @@ body{
   margin: 1%;
   }
 
- .ca{
+.ca{
     background: url('http://i.imgur.com/eW137EN.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -75,7 +77,7 @@ body{
     margin: 1%;
     }
 
- .az{
+.az{
       background: url('http://blog.gograndgetaways.com/wp-content/uploads/2011/06/shutterstock_71026762-ARIZONA.jpg') no-repeat center center fixed;
       -webkit-background-size: cover;
       -moz-background-size: cover;
@@ -86,7 +88,7 @@ body{
       margin: 1%;
       }
 
-   .ak{
+  .ak{
       background: url('http://cdn.onlyinyourstate.com/wp-content/uploads/2015/11/22291024623_b1b8bcfcc0_k-700x425.jpg') no-repeat center center fixed;
       -webkit-background-size: cover;
       -moz-background-size: cover;
@@ -117,8 +119,8 @@ body{
 }
 
 .btn, .btn-primary{
-  margin-top: 3%;
-}
+  margin-bottom: 3%;
+  }
 
 .form-group{
   margin-bottom: 5rem;
@@ -129,8 +131,82 @@ body{
 }
 
 h2{
-  font-size: 3rem;
+  font-size: 5rem;
   color: black;
   font-family: 'Dancing Script', cursive;
+}
 
+.App-text{
+  padding-top:2%;
+}
+
+.card-deck{
+  justify-content: center;
+  margin: 20px 40px;
+}
+.card{
+     margin: 10px 30px;
+     padding: 80px 50px;
+     border-radius: 10px;
+     color: #000;
+}
+
+.col-md-5{
+  padding: 1%;
+  background-color: white;
+  margin: 1%;
+}
+
+
+.logo {
+     background-color: white;
+     background-image: url('/styles/images/22-150.jpg');
+     background-size: cover;
+}
+.navbar-header {
+     list-style-type: none;
+     margin: 0 auto;
+     display: flex;
+}
+.nav-link {
+     color: white;
+}
+.form-control {
+     font-size: 1em;
+     color: #080808 ;
+}
+
+.section-content{
+     text-align: center;
+}
+
+#contact{
+     padding-top: 60px;
+     width: 90vw;
+     height: 550px;
+     background: -webkit-linear-gradient(to left, #3a6186 , #89253e );
+     background: linear-gradient(to left, #3a6186 , #89253e );
+     color : #fff;
+     margin: 0 auto;
+     padding: 20px;
+}
+.contact-section{
+     padding-top: 40px;
+}
+.contact-section .col-md-6{
+     width: 50%;
+}
+textarea.form-control {
+     height: 135px;
+     /* margin-top: px;*/
+}
+.form-submit {
+     margin: 0 auto;
+}
+.detail-text {
+     color: #fff;
+}
+@media screen and (min-width: 768px){
+     body {
+     }
 }
