--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script');
+@import url('https://fonts.googleapis.com/css?family=Damion');
+* {
+     box-sizing : border-box;
+/*outline: 1px solid rgba(255, 0, 0, 0.2);*/
+}
 body{
-  background-color: black;
-  color: #fff;
+  background-color: #000000;
+  color: #ffffff;
   font-size: 18px;
+  font-family: sans-serif;
 }
 
 .App {
@@ -13,13 +20,9 @@ body{
   height: 80px;
 }
 
-.featured, h1{
-  color: white;
-}
-
 .App-header {
   background: url('https://images.pexels.com/photos/163078/hiking-sunset-dessert-mountains-163078.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb') no-repeat center center;
-  background-color: #222;
+  background-color: #222222;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -27,7 +30,7 @@ body{
   height: 180px;
   margin-bottom: 2%;
   padding-bottom: 50%;
-  color: white;
+  color: #ffffff;
 }
 
 .App-intro {
@@ -37,6 +40,10 @@ body{
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.featured, h1{
+  color: #ffffff;
 }
 
 .card-img-top{
@@ -107,11 +114,11 @@ body{
 
 .header {
   margin-top:1%;
-  color:#fff;
+  color:#ffffff;
 }
 
 .header h1 {
-   color:#fff;
+   color:#ffffff;
 }
 
 .form-content{
@@ -132,8 +139,8 @@ body{
 
 h2{
   font-size: 5rem;
-  color: black;
-  font-family: 'Dancing Script', cursive;
+  color: #000000;
+  font-family: 'Damion', cursive;
 }
 
 .App-text{
@@ -148,18 +155,18 @@ h2{
      margin: 10px 30px;
      padding: 80px 50px;
      border-radius: 10px;
-     color: #000;
+     color: #000000;
 }
 
 .col-md-5{
   padding: 1%;
-  background-color: white;
+  background-color: #ffffff;
   margin: 1%;
 }
 
 
 .logo {
-     background-color: white;
+     background-color: #ffffff;
      background-image: url('/styles/images/22-150.jpg');
      background-size: cover;
 }
@@ -176,10 +183,6 @@ h2{
      color: #080808 ;
 }
 
-.section-content{
-     text-align: center;
-}
-
 #contact{
      padding-top: 60px;
      width: 90vw;
@@ -190,6 +193,12 @@ h2{
      margin: 0 auto;
      padding: 20px;
 }
+
+.section-content{
+     text-align: center;
+     color: white;
+}
+
 .contact-section{
      padding-top: 40px;
 }
@@ -203,9 +212,49 @@ textarea.form-control {
 .form-submit {
      margin: 0 auto;
 }
-.detail-text {
-     color: #fff;
+.detail-body {
+     margin: 10px 20px;
+     padding: 10px 20px;
+     background-color: #ffffff;
+     color: #3D5561;
 }
+.trail-title {
+     color: #3D5561;
+     font-size: 5rem;
+     font-weight: 500;
+     font-family: "Damion", cursive;
+}
+.detail-subtitle {
+     font-weight: bold;
+}
+.description {
+     color: #3D5561;
+}
+button {
+     text-align: center;
+     background-color: #32C1E3;
+     padding: 10px 10px;
+     border: 2px solid #F9AE2D;
+     border-radius: 15px;
+}
+button a{
+     color: #ffffff;
+}
+button a:hover {
+     color: #F9AE2D;
+     text-decoration: none;
+}
+.line {
+     color: #3D5561;
+     height: 22px;
+}
+hr {
+     background-color: #F9AE2D;
+     height: 4px;
+     width: 100%;
+     border: 1px solid #a2c6d8;
+}
+
 @media screen and (min-width: 768px){
      body {
      }
